<resources>
    <string name="app_name">Zoom Video Call Guide</string>
    <string name="zoom_logo">zoom_logo</string>
    <string name="zoom_video_call_guide">Zoom Video Call Guide</string>
    <string name="start_guide">Start Guide</string>

    <!--Google Ad Code-->
    <string name="app_id">ca-app-pub-4157557049877666~8301569807</string>
    <string name="banner_id">ca-app-pub-4157557049877666/1736161458</string>
    <string name="interstial_id">ca-app-pub-4157557049877666/5500787275</string>
    <!--Google Test Ad Code
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstial_id">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="zoom_provides_the_primary_integrated_meeting_experience_platform_that_brings_together_hd_video_conferencing_mobility_and_web_meeting_as_a_free_cloud_service_so_you_will_have_crystal_clear_video_conversation_and_top_quality_screen_sharing_anytime_from_anywhere_with_up_to_25_people_or_rooms_it_is_available_for_windows_mac_ios_and_android_and_works_with_pstn_and_h_323_sip_room_systems_zoom_will_release_licensing_which_will_allow_additional_capacity_within_1st_quarter_of_2014">Zoom provides the primary integrated meeting experience platform that brings together HD video conferencing, mobility, and web meeting as a free cloud service. So, you will have crystal-clear video conversation and top-quality screen sharing, anytime, from anywhere, with up to 25 people or rooms. It is available for windows, Mac, iOS and Android and works with PSTN and H.323/SIP room systems. ZOOM will release licensing which will allow additional capacity within 1st quarter of 2014.</string>
    <string name="to_get_started_just_go_to_the_website_and_click_on_sign_up_from_there_you_can_enter_your_first_name_and_last_name_and_your_email_address_to_sign_up_additional_functionality_will_be_added_over_the_next_few_months_that_will_allow_you_to_use_your_nlu_username_and_password">To get started, just go to the website and click on sign up. From there you can enter your first name and last name, and your email address to sign up. Additional functionality will be added over the next few months that will allow you to use your NLU username and password.</string>
    <string name="what_is_zoom">What is Zoom?</string>
    <string name="how_can_i_start">How Can I Start?</string>
    <string name="to_log_in_you_will_use_the_email_and_password_that_you_simply_have_created_or_use_your_google_or_facebook_account_if_you_have_not_created_a_user_id_and_password_please_click_on_check_in_to_make_a_zoom_account_but_if_you_have_not_remembered_your_password_please_select_forgot_your_password">To log in, you will use the email and password that you simply have created, or use your Google or Facebook account. If you have not created a user id and password, please click on “Check in” to make a Zoom account, but if you have not remembered your password. Please select Forgot your password.</string>
    <string name="how_can_i_login">How can i Login</string>
    <string name="how_can_i_login_Btn">How Can i Login</string>
    <string name="what_can_i_do_after_launch_the_app_btn">What Can I do after launch the app</string>
    <string name="where_can_i_find_the_desktop_or_mobile_app_btn">Where can I find the Desktop or Mobile App</string>
    <string name="how_do_i_start_meeting_btn">How do I start Meeting</string>
    <string name="what_can_i_do_after_launch_the_app">What Can I do after launch the app?</string>
    <string name="after_launching_the_app_you_have_two_options_you_can_join_a_meeting_or_host_a_meeting_if_you_do_not_wish_to_log_in_and_just_want_to_join_a_meeting_in_progress_click_on_join_a_meeting_if_you_want_to_log_in_and_start_meeting_click_host_meeting_note_the_client_version_on_the_lower_right_corner_of_this_dialog_box">After launching the app, you have two options. You can join a meeting, or host a meeting. If you do not wish to log in, and just want to join a meeting in progress click on join a meeting. If you want to log in and start meeting, click Host meeting. Note: The client version on the lower right corner of this dialog box.</string>
    <string name="once_you_have_got_signed_up_or_logged_in_click_on_host_a_gathering_the_desktop_app_will_auto_download_alternatively_you_will_click_on_the_download_footer_link_at_website_for_ios_visit_the_apple_app_store_or_by_searching_zoom_for_android_visit_google_play_store_or_by_simply_searching_zoom_hd_meetings">Once you have got signed up or logged in, click on Host a gathering, the desktop app will auto download. Alternatively, you will click on the download footer link at website for iOS, visit the apple app store or by searching zoom. For android, visit Google Play Store or by simply searching zoom HD meetings.</string>
    <string name="once_logged_in_you_will_see_the_main_dialog_box_as_shown_below_the_default_tab_is_home_you_can_click_on_video_meeting_to_start_an_instant_zoom_meeting_click_share_screen_meeting_to_start_a_meeting_while_sharing_your_desktop_or_application_click_on_schedule_to_setup_a_future_meeting_click_on_join_to_join_a_meeting_that_has_already_been_started_the_my_meeting_tab_shows_your_upcoming_scheduled_or_recuring_meetings_you_can_also_click_on_the_recorded_tab_to_view_previously_recorded_meetings_you_can_start_selecting_the_pre_scheduled_meeting_that_you_have_listed_in_your_upcoming_meetings_edit_you_can_edit_or_update_your_scheduled_meeting_delete_selecting_delete_will_permanently_delete_your_scheduled_meeting_copy_url_here_you_can_copy_your_scheduled_meeting_url_and_manually_paste_into_an_email_im_sms_etc_if_you_do_not_see_your_scheduled_meeting_click_the_refresh_tab_in_the_upper_right_hand_corner_to_update_refresh_the_meeting_list_additionally_make_sure_to_schedule_enough_time_for_your_meetings_will_end_as_scheduled">Once logged in, you will see the main dialog box as shown below. The default tab is Home. You can click on video meeting to start an instant zoom meeting. Click share screen meeting to start a meeting while sharing your desktop or application click on schedule to setup a future meeting. Click on join to join a meeting that has already been started. The My meeting tab shows your upcoming scheduled or recuring meetings. You can also click on the recorded tab to view previously recorded meetings. You can start selecting the pre-scheduled meeting that you have listed in your upcoming meetings. Edit: You can edit or update your scheduled meeting. Delete: Selecting delete will permanently delete your scheduled meeting. Copy URL: Here you can copy your scheduled meeting URL and manually paste into an email, IM, SMS etc. If you do not see your scheduled meeting, click the refresh tab in the upper right-hand corner to update/ refresh the meeting list. Additionally, make sure to schedule enough time for your meetings will end as scheduled.</string>
    <string name="how_do_i_start_meeting">How do I start Meeting?</string>
    <string name="what_can_do_in_meeting">What can do in meeting?</string>
    <string name="you_will_find_the_settings_tab_within_the_main_panel_or_the_meeting_menu_bar_after_clicking_settings_you_will_have_the_subsequent_options_audio_click_settings_on_your_pc_or_mac_client_to_check_your_audio_or_during_a_video_meeting_click_settings_within_the_menu_bar_to_activate_toggle_for_then_click_on_the_audio_tab_to_check_your_audio_settings_select_the_microphone_sink_and_check_out_a_special_audio_source_if_the_opposite_side_can_hear_you_select_the_speaker_dropdown_and_check_out_a_difference_speaker_source_if_you_will_hear_the_opposite_side_video_to_check_your_video_camera_before_or_during_a_video_tab_to_check_your_video_selection_here_you_will_also_click_on_the_sink_arrow_to_modify_between_cameras_that_you_simply_have_connected_to_your_computer_general_you_will_select_additional_preferences_feedback_we_welcome_any_questions_comments_or_feedback_recording_here_you_will_browse_open_your_stored_recordings_all_recordings_are_stored_on_your_local_device_computer_account_here_you_will_upgrade_your_account_to_pro_user_or_manage_your_account_details_learn_more_about_account">You will find the Settings tab within the main panel or the meeting menu bar. After clicking Settings, you will have the subsequent options: Audio: Click Settings on your PC or Mac client to check your audio, or during a video meeting, click settings within the menu bar (to activate Toggle for). Then click on the Audio tab to check your audio settings. Select the microphone sink and check out a special audio source if the opposite side can hear you. Select the speaker dropdown and check out a difference speaker source if you will hear the opposite side. Video: to check your video camera. Before or during a video tab to check your video selection. Here you will also click on the sink arrow to modify between cameras that you simply have connected to your computer. General: you will select additional preferences Feedback: We welcome any questions, comments, or feedback Recording: Here you will browse/open your stored recordings (all recordings are stored on your local device/computer). Account: Here you will upgrade your account to pro user or, manage your account details (Learn more about Account).</string>
    <string name="zoom_lets_you_record_your_web_conferencing_calls_as_videos_a_handy_feature_for_sharing_the_meeting_with_people_who_may_have_missed_it_or_for_reviewing_what_was_said_when_you_record_you_must_choose_whether_to_use_the_local_or_cloud_options_local_means_you_store_the_video_file_yourself_whether_locally_on_your_computer_or_in_another_storage_space_that_you_provide_with_cloud_which_is_for_paying_members_only_zoom_stores_the_video_for_you_in_its_cloud_storage_different_account_types_come_with_different_amounts_of_storage_one_convivence_of_the_cloud_option_is_that_people_can_stream_the_video_in_a_web_browser_once_it_is_ready">Zoom lets you record your web conferencing calls as videos, a handy feature for sharing the meeting with people who may have missed it or for reviewing what was said. When you record, you must choose whether to use the local or cloud options. Local means you store the video file yourself, whether locally on your computer or in another storage space that you provide. With cloud, which is for paying members only, zoom stores the video for you in its cloud storage (different account types come with different amounts of storage). One convivence of the cloud option is that people can stream the video in a web browser once it is ready.</string>
    <string name="record_the_video_call">Record the Video Call: -</string>
    <string name="once_you_have_started_or_joined_a_meeting_you_can_perform_the_following_actions_from_the_menu_bar_located_at_the_bottom_of_the_meeting_window_move_your_mouse_to_toggle_you_can_invite_more_people_to_join_by_email_im_sms_or_meeting_id_screen_share_your_desktop_or_specific_application_window_group_or_private_chat_participants_and_chat_mute_unmute_audio_stop_start_video_configure_your_settings_your_settings_leave_or_end_the_video">Once you have started or joined a meeting, you can perform the following actions from the menu bar located at the bottom of the meeting window (move your mouse to toggle). You Can invite more people to join by email, IM, SMS or meeting id. Screen share your desktop or specific application window. Group or private chat. Participants and chat. Mute/Unmute Audio. Stop /Start video. Configure your settings your settings. Leave or end the video.</string>
    <string name="before_you_start_meeting">Before You Start Meeting</string>
    <string name="record_the_video_calls">Record the Video Calls</string>
    <string name="what_can_do_in_zoom_meeting">What can do in Zoom Meeting</string>


</resources>