<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".WhatisZoom">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/what_is_zoom"
            android:textColor="@color/mainColor"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/zoom_provides_the_primary_integrated_meeting_experience_platform_that_brings_together_hd_video_conferencing_mobility_and_web_meeting_as_a_free_cloud_service_so_you_will_have_crystal_clear_video_conversation_and_top_quality_screen_sharing_anytime_from_anywhere_with_up_to_25_people_or_rooms_it_is_available_for_windows_mac_ios_and_android_and_works_with_pstn_and_h_323_sip_room_systems_zoom_will_release_licensing_which_will_allow_additional_capacity_within_1st_quarter_of_2014"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>