<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordtheVideoCallActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/record_the_video_call"
            android:textColor="@color/mainColor"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/zoom_lets_you_record_your_web_conferencing_calls_as_videos_a_handy_feature_for_sharing_the_meeting_with_people_who_may_have_missed_it_or_for_reviewing_what_was_said_when_you_record_you_must_choose_whether_to_use_the_local_or_cloud_options_local_means_you_store_the_video_file_yourself_whether_locally_on_your_computer_or_in_another_storage_space_that_you_provide_with_cloud_which_is_for_paying_members_only_zoom_stores_the_video_for_you_in_its_cloud_storage_different_account_types_come_with_different_amounts_of_storage_one_convivence_of_the_cloud_option_is_that_people_can_stream_the_video_in_a_web_browser_once_it_is_ready"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>